# x-bookmark-brain

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  pyproject.toml  run.sh
.claude/: settings.json
docs/: PRD.md  adapters-roadmap.md  issues-plan.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
extension/: README.md  capture.js  inject.js  manifest.json
scripts/: check_ads_api.py  compliance_delete.py  deploy.sh  eval_answers.py  eval_judgments.json  eval_results.json  eval_retrieval.py  logs.sh  migrate_to_neon.py  setup_app_role.py  tenant_repair.py
src/xbb/: __init__.py  __main__.py  ai.py  ask.py  auth.py  authui.py  autoanswer.py  billing.py  bookmarks.py  categorize.py  config.py  credits.py  deps.py  github.py  githubauth.py  graph.py  ingestion.py  jobs.py  landing.py  legal.py  log.py  mail.py  pricing.py  reddit.py  redditauth.py  rerank.py  search.py  sources.py  storage.py  templates.py  usage.py  web.py  webui.py  xapi.py  xauth.py  xconv.py
tests/: conftest.py  test_api.py  test_ask.py  test_ask_sources.py  test_auth.py  test_auth_flow.py  test_auto_answer.py  test_billing.py  test_categorize.py  test_cli.py  test_credits.py  test_database_urls.py  test_extract_json.py  test_foundation.py  test_free_tier.py  test_github.py  test_graph.py  test_import_pricing.py  test_ingestion.py  test_isolation.py  test_jobs.py  test_landing.py  test_metering.py  test_oauth_state.py  test_parse.py  test_purchase.py  test_reddit.py  test_require_auth.py  test_resume.py  test_search.py  test_source_routes.py  test_sources.py  test_ui.py  test_upsell.py  test_usage.py  test_web_import.py  test_web_import_parse.py  test_x_signin.py  test_xapi.py  test_xauth.py  (+1 more)
tests/fixtures/: chrome_bookmarks.html  firefox_bookmarks.html  github_starred.json  original.json  quote.json  reddit_saved.json  reply.json
x-bookmark-brain/: HANDOFF.md
