[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "x-bookmark-brain"
version = "0.0.1"
description = "Backfill, auto-categorize, and AI-search X (Twitter) bookmarks."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "httpx",          # X internal GraphQL calls during backfill
    "boto3",          # Amazon Bedrock (Claude + embeddings)
    "pydantic",
    "python-dotenv",
    "python-multipart",  # HTML form posts for the web UI
    "numpy",          # vector math (embedding -> bytes/list)
    "psycopg[binary]",   # Postgres driver (Neon)
    "psycopg-pool",      # connection pooling for the web app
    "pgvector",          # pgvector type adapter for psycopg
    "itsdangerous",      # signed magic-link + session tokens (auth)
    "stripe",            # subscription billing (checkout + webhooks)
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
